// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddLabelsForm render allows expressions 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Start somebody else
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Start somebody else in a flow"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Labels
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_labels"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="keyboard-return-1"
                    placeholder="Enter the name of an existing label or create a new one"
                    size="0"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.9999 28.0005C16.7333 28.0005 16.4813 27.8965 16.2933 27.7072L11.3159 22.7298C11.1226 22.5605 10.9999 22.2885 10.9999 22.0045C10.9999 21.9898 10.9999 21.9752 11.0013 21.9605C11.0066 21.8512 11.0279 21.7498 11.0653 21.6525C11.0693 21.6432 11.0826 21.6085 11.0866 21.5992C11.1253 21.5138 11.1759 21.4325 11.2373 21.3605C11.2546 21.3365 11.2746 21.3138 11.2933 21.2938L16.2933 16.2938C16.4826 16.1045 16.7333 16.0005 16.9999 16.0005C17.2666 16.0005 17.5186 16.1045 17.7066 16.2938C17.8959 16.4818 17.9999 16.7338 17.9999 17.0005C17.9999 17.2672 17.8959 17.5192 17.7066 17.7072L14.4106 21.0045H21.9999C24.7573 21.0045 26.9999 18.7618 26.9999 16.0045V13.0005C26.9999 12.4485 27.4479 12.0005 27.9999 12.0005C28.5519 12.0005 28.9999 12.4485 28.9999 13.0005V16.0045C28.9999 19.8645 25.8599 23.0045 21.9999 23.0045H14.4173L17.7066 26.2938C18.0959 26.6832 18.0959 27.3178 17.7066 27.7085C17.5186 27.8965 17.2666 28.0005 16.9999 28.0005Z"
                        fill="#3B414D"
                      />
                      <path
                        d="M10 35.0005C7.24267 35.0005 5 32.7578 5 30.0005V10.0005C5 7.24316 7.24267 5.00049 10 5.00049H30C32.7573 5.00049 35 7.24316 35 10.0005V30.0005C35 32.7578 32.7573 35.0005 30 35.0005H10ZM10 7.00049C8.34533 7.00049 7 8.34582 7 10.0005V30.0005C7 31.6552 8.34533 33.0005 10 33.0005H30C31.6547 33.0005 33 31.6552 33 30.0005V10.0005C33 8.34582 31.6547 7.00049 30 7.00049H10Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="selected-list-container"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-tag-content unnnic-tag
      unnnic-tag-scheme--neutral-dark
      "
                count="0"
                data-passed-props="[object Object]"
                data-v-3e4e81d5=""
                v-bind="[object Object]"
              >
                <span
                  class="unnnic-tag__label
    unnnic-tag__label--hasIcon
    "
                  data-v-3e4e81d5=""
                >
                  @result.my_expression
                </span>
                <span
                  class="unnnic-tag__icon unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-darkest"
                  data-v-3e4e81d5=""
                  data-v-a1936218=""
                >
                  <svg
                    fill="none"
                    viewBox="0 0 40 40"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="primary"
                      d="M34.0592 34.9982C33.9361 34.9985 33.8142 34.9744 33.7004 34.9272C33.5867 34.88 33.4835 34.8107 33.3969 34.7232L19.9995 21.3271L6.60213 34.7232C6.51561 34.811 6.4125 34.8808 6.29879 34.9284C6.18507 34.976 6.06303 35.0005 5.93976 35.0005C5.81648 35.0005 5.69444 34.976 5.58073 34.9284C5.46701 34.8808 5.3639 34.811 5.27739 34.7232C5.10209 34.5471 5.00367 34.3087 5.00367 34.0602C5.00367 33.8117 5.10209 33.5734 5.27739 33.3972L18.6748 19.9999L5.27739 6.60374C5.09992 6.42753 5.00244 6.19132 5.00244 5.94137C5.00244 5.69142 5.09992 5.45522 5.27739 5.279C5.4536 5.10154 5.68981 5.00406 5.93976 5.00406C6.18971 5.00406 6.42591 5.10154 6.60213 5.279L19.9995 18.6751L33.3969 5.27775C33.4834 5.18994 33.5865 5.1202 33.7002 5.0726C33.8139 5.025 33.936 5.00049 34.0592 5.00049C34.1825 5.00049 34.3046 5.025 34.4183 5.0726C34.532 5.1202 34.6351 5.18994 34.7216 5.27775C34.8092 5.36454 34.8787 5.46782 34.9261 5.58161C34.9735 5.69541 34.9979 5.81747 34.9979 5.94075C34.9979 6.06403 34.9735 6.18609 34.9261 6.29988C34.8787 6.41367 34.8092 6.51695 34.7216 6.60374L21.3242 20.0011L34.7216 33.3985C34.8969 33.5746 34.9953 33.813 34.9953 34.0615C34.9953 34.31 34.8969 34.5484 34.7216 34.7245C34.6347 34.8115 34.5315 34.8805 34.4178 34.9275C34.3041 34.9745 34.1822 34.9985 34.0592 34.9982Z"
                      fill="#3B414D"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`AddLabelsForm render allows expressions 2`] = `
Array [
  Object {
    "labels": Array [
      Object {
        "name_match": "@result.my_expression",
      },
    ],
    "type": "add_input_labels",
    "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
  },
]
`;

exports[`AddLabelsForm render should render 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Add label
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Label the incoming message"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Labels
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_labels"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="keyboard-return-1"
                    placeholder="Enter the name of an existing label or create a new one"
                    size="0"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.9999 28.0005C16.7333 28.0005 16.4813 27.8965 16.2933 27.7072L11.3159 22.7298C11.1226 22.5605 10.9999 22.2885 10.9999 22.0045C10.9999 21.9898 10.9999 21.9752 11.0013 21.9605C11.0066 21.8512 11.0279 21.7498 11.0653 21.6525C11.0693 21.6432 11.0826 21.6085 11.0866 21.5992C11.1253 21.5138 11.1759 21.4325 11.2373 21.3605C11.2546 21.3365 11.2746 21.3138 11.2933 21.2938L16.2933 16.2938C16.4826 16.1045 16.7333 16.0005 16.9999 16.0005C17.2666 16.0005 17.5186 16.1045 17.7066 16.2938C17.8959 16.4818 17.9999 16.7338 17.9999 17.0005C17.9999 17.2672 17.8959 17.5192 17.7066 17.7072L14.4106 21.0045H21.9999C24.7573 21.0045 26.9999 18.7618 26.9999 16.0045V13.0005C26.9999 12.4485 27.4479 12.0005 27.9999 12.0005C28.5519 12.0005 28.9999 12.4485 28.9999 13.0005V16.0045C28.9999 19.8645 25.8599 23.0045 21.9999 23.0045H14.4173L17.7066 26.2938C18.0959 26.6832 18.0959 27.3178 17.7066 27.7085C17.5186 27.8965 17.2666 28.0005 16.9999 28.0005Z"
                        fill="#3B414D"
                      />
                      <path
                        d="M10 35.0005C7.24267 35.0005 5 32.7578 5 30.0005V10.0005C5 7.24316 7.24267 5.00049 10 5.00049H30C32.7573 5.00049 35 7.24316 35 10.0005V30.0005C35 32.7578 32.7573 35.0005 30 35.0005H10ZM10 7.00049C8.34533 7.00049 7 8.34582 7 10.0005V30.0005C7 31.6552 8.34533 33.0005 10 33.0005H30C31.6547 33.0005 33 31.6552 33 30.0005V10.0005C33 8.34582 31.6547 7.00049 30 7.00049H10Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
          <div
            class="selected-list-container"
          >
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-tag-content unnnic-tag
      unnnic-tag-scheme--neutral-dark
      "
                count="0"
                data-passed-props="[object Object]"
                data-v-3e4e81d5=""
                v-bind="[object Object]"
              >
                <span
                  class="unnnic-tag__label
    unnnic-tag__label--hasIcon
    "
                  data-v-3e4e81d5=""
                >
                  My Label
                </span>
                <span
                  class="unnnic-tag__icon unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-darkest"
                  data-v-3e4e81d5=""
                  data-v-a1936218=""
                >
                  <svg
                    fill="none"
                    viewBox="0 0 40 40"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="primary"
                      d="M34.0592 34.9982C33.9361 34.9985 33.8142 34.9744 33.7004 34.9272C33.5867 34.88 33.4835 34.8107 33.3969 34.7232L19.9995 21.3271L6.60213 34.7232C6.51561 34.811 6.4125 34.8808 6.29879 34.9284C6.18507 34.976 6.06303 35.0005 5.93976 35.0005C5.81648 35.0005 5.69444 34.976 5.58073 34.9284C5.46701 34.8808 5.3639 34.811 5.27739 34.7232C5.10209 34.5471 5.00367 34.3087 5.00367 34.0602C5.00367 33.8117 5.10209 33.5734 5.27739 33.3972L18.6748 19.9999L5.27739 6.60374C5.09992 6.42753 5.00244 6.19132 5.00244 5.94137C5.00244 5.69142 5.09992 5.45522 5.27739 5.279C5.4536 5.10154 5.68981 5.00406 5.93976 5.00406C6.18971 5.00406 6.42591 5.10154 6.60213 5.279L19.9995 18.6751L33.3969 5.27775C33.4834 5.18994 33.5865 5.1202 33.7002 5.0726C33.8139 5.025 33.936 5.00049 34.0592 5.00049C34.1825 5.00049 34.3046 5.025 34.4183 5.0726C34.532 5.1202 34.6351 5.18994 34.7216 5.27775C34.8092 5.36454 34.8787 5.46782 34.9261 5.58161C34.9735 5.69541 34.9979 5.81747 34.9979 5.94075C34.9979 6.06403 34.9735 6.18609 34.9261 6.29988C34.8787 6.41367 34.8092 6.51695 34.7216 6.60374L21.3242 20.0011L34.7216 33.3985C34.8969 33.5746 34.9953 33.813 34.9953 34.0615C34.9953 34.31 34.8969 34.5484 34.7216 34.7245C34.6347 34.8115 34.5315 34.8805 34.4178 34.9275C34.3041 34.9745 34.1822 34.9985 34.0592 34.9982Z"
                      fill="#3B414D"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Confirm 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
